--- a/style.css
+++ b/style.css
@@ -2,48 +2,62 @@
 {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 20px;
-    color: #000000; 
+    background-color: #000000; 
+    background-attachment: fixed;
+}
+
+#header1
+{
     background-image: url('images/linen.jpg');
+    margin-left: 100px;
+    float: left;
+    width: 1000px;
 }
 
-table
+ul
 {
-    padding-left: 10%;
-    padding-right: 10%;
-    width: 100%;
-    border-spacing: 0;
-    padding-bottom: 2%;
+    padding-left: 0%;
+    //text-align: center;
+    //width: 100%;
 }
 
-info_table
+li
 {
-    width: 100%;
-    border-spacing: 0;
-}
-
-th
-{
+    display: inline-block;
     padding-top: 2%; 
+    padding-left: 3%;
+    padding-right: 3%;
     height: 50px;
-    width: 20%;
+    width: 13.5%;
     text-align:center;
 }
-
-td
+.wrap
 {
-    /*Color Name: Battleship Gray*/
-    color: #848482; 
-    padding-right: 5%;
-    padding-left: 5%;
-    height: 50px;
-    width: 33.3333333%;
-    text-align: center;
-    vertical-align: top;
+    margin-left: 100px;
+    width: 1000px;
+}
+#section1
+{
+    background-image: url('images/linen.jpg');
+    //text-align: center;
+    color: #848482;
+    display: inline-block;
+    //text-align: justify;
 }
 
-header1, header2
+.content
 {
+    vertical-align: top;
+    display: inline-block;
+    width: 32.9%;
+}
 
+.paragraph
+{
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
 }
 
 a.links{color: #848482;text-decoration:none;} 
@@ -56,7 +70,7 @@ jpg
 }
 
 /* Wrapper for page content to push down footer */
-wrap
+.footer_wrap
 {
 	min-height: 100%;
 	height: auto;
