--- a/style.css
+++ b/style.css
@@ -2,16 +2,65 @@
 {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 20px;
-    background-color: #000000; 
+    background-color: #000000;
+    background-image: url('images/background1.png');
+    background-repeat: repeat-y;
     background-attachment: fixed;
+    margin-top: 0%;
 }
 
+/* special case if screen width > 1134 */
+@media only screen and (min-width: 1850px) {
+    .middle_wrap {
+        //background-image: url('images/linen.jpg');
+        margin-left: .5%;
+        float: left;
+        width: 60%;
+    }
+}
+/* special case if screen width < 1134 */
+@media only screen and (max-width: 1850px) {
+    .middle_wrap {
+        //background-image: url('images/linen.jpg');
+        margin-left: .5%;
+        float: left;
+        width: 1100px;
+    }
+}
+.god_wrap
+{
+    width: 100%;
+    //display: inline-block;
+}
+
+.rightside_wrap
+{
+    //margin-left: 100px;
+    float: right;
+    width: 35%;
+}
+/*
+.rightside_section
+{
+    background-image: url('images/Head of the Fish.jpg');
+    background-repeat: repeat-y;
+}
+
+.middle_wrap
+{
+    background-image: url('images/linen.jpg');
+    margin-left: 5%;
+    float: left;
+    width: 60%;
+}
+    */
 #header1
 {
     background-image: url('images/linen.jpg');
-    margin-left: 100px;
+    background-attachment: fixed;
+    //margin-left: 100px;
     float: left;
-    width: 1000px;
+    width: 100%;
 }
 
 ul
@@ -31,18 +80,26 @@ li
     width: 13.5%;
     text-align:center;
 }
-.wrap
+
+.contentwrap
 {
     margin-left: 100px;
     width: 1000px;
 }
+
 #section1
 {
     background-image: url('images/linen.jpg');
+    background-attachment: fixed;
     //text-align: center;
     color: #848482;
-    display: inline-block;
     //text-align: justify;
+}
+
+#image_section
+{
+    background-image: url('images/linen.jpg');
+    background-attachment: fixed;
 }
 
 .content
@@ -50,6 +107,13 @@ li
     vertical-align: top;
     display: inline-block;
     width: 32.9%;
+}
+
+.contact_content
+{
+    vertical-align: top;
+    display: inline-block;
+    width: 24.5%;
 }
 
 .paragraph
@@ -64,9 +128,9 @@ a.links{color: #848482;text-decoration:none;}
 a.links1{color: #00ffed;text-decoration:none;}
 a.links:hover{color: #ff5500;text-decoration:none;}
 
-jpg
-{
-
+#jpg
+{   
+    width: 100%;
 }
 
 /* Wrapper for page content to push down footer */
