--- a/style.css
+++ b/style.css
@@ -3,17 +3,16 @@
     font-family: Helvetica, Arial, sans-serif;
     font-size: 20px;
     background-color: #000000;
-    background-image: url('images/background.png');
+    //background-image: url('images/background.png');
     background-repeat: repeat-y;
     background-attachment: fixed;
     margin-top: 0%;
+    margin-left: 0%;
 }
 
 /* special case if screen width > 1134 */
 @media only screen and (min-width: 1850px) {
     .middle_wrap {
-        //background-image: url('images/linen.jpg');
-        margin-left: .05%;
         float: left;
         width: 60%;
     }
@@ -21,16 +20,14 @@
 /* special case if screen width < 1134 */
 @media only screen and (max-width: 1850px) {
     .middle_wrap {
-        //background-image: url('images/linen.jpg');
-        margin-left: .05%;
         float: left;
         width: 1100px;
     }
 }
+
 .god_wrap
 {
     width: 100%;
-    //display: inline-block;
 }
 
 .rightside_wrap
@@ -70,6 +67,7 @@
     //margin-left: 100px;
     float: left;
     width: 100%;
+    border-bottom: 10px solid #d95500;
 }
 
 #header2
@@ -81,8 +79,6 @@
 ul
 {
     padding-left: 0%;
-    //text-align: center;
-    //width: 100%;
 }
 
 li
@@ -117,7 +113,6 @@ li
     background-image: url('images/linen.jpg');
     background-attachment: fixed;
     color: #848482;
-    //text-align: justify;
 }
 
 .content
@@ -146,7 +141,6 @@ li
 {
     height: 100%;
     text-align: center;
-    border-top: 10px solid #d95500;
     background-image: url('images/skiing.jpg');
     background-repeat: no-repeat;
 }
@@ -190,23 +184,15 @@ a.links1:hover{color: #ff6500;text-decoration:none;}
     width: 100%;
 }
 
-/* Wrapper for page content to push down footer */
+/* Wrapper to push down footer */
 .footer_wrap
 {
-	min-height: 100%;
-	height: auto;
-	/* Negative indent footer by its height */
-	margin: 0 auto -60px;
-	/* Pad bottom by footer height */
-	padding: 0 0 60px;
-}
-
-/* Set the fixed height of the footer here */
-footer
-{
+    position:absolute;
+    bottom:0;
+    width: inherit;
     text-align: center;
-	height: 40px;
-	background-color: #848482;
+    color: #848482;
+	background: url('images/linen.jpg');
     margin-top: 100%;
 }
 
@@ -242,6 +228,18 @@ footer
     text-decoration: none;
 }
 
+/* Corner radius */
+.ui-tabs .ui-tabs-nav li {
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    border-top-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-top: 0;
+    border-bottom-width: 1px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
 .ui-state-active,
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active 
@@ -258,6 +256,8 @@ footer
 {
 	border: 1px solid #000000;
 	background: #e6e6e6 url(images/ui-bg_glass_75_1x400.png) 50% 50% repeat-x;
+    opacity:0.5;
+    filter:alpha(opacity=50);
 	font-weight: normal;
 	color: #848482;
 }
@@ -275,7 +275,7 @@ footer
 .ui-state-hover a:link,
 .ui-state-hover a:visited
 {
-	color: #d55500;
+	color: #d95500;
 	text-decoration: none;
 }
 .ui-state-focus a,
