--- a/style.css
+++ b/style.css
@@ -3,38 +3,34 @@
     font-family: Helvetica, Arial, sans-serif;
     font-size: 20px;
     background-color: #000000;
-    //background-image: url('images/background.png');
-    background-repeat: repeat-y;
-    background-attachment: fixed;
     margin-top: 0%;
-    margin-left: 0%;
-}
-
-/* special case if screen width > 1134 */
-@media only screen and (min-width: 1850px) {
-    .middle_wrap {
-        float: left;
-        width: 60%;
-    }
-}
-/* special case if screen width < 1134 */
-@media only screen and (max-width: 1850px) {
-    .middle_wrap {
-        float: left;
-        width: 1100px;
-    }
+    margin-left: 7.5%;
+    background-image: url('images/headshot.png');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .god_wrap
 {
     width: 100%;
+    height: 100%;
+}
+
+.middle_wrap
+{
+    float: left;
+    width: 1100px;
 }
 
 .rightside_wrap
 {
-    //margin-left: 100px;
+    //background-image: url('images/Head of the Fish.png');
+    //background-attachment: fixed;
+    //background-repeat: round;
     float: right;
-    width: 35%;
+    width: calc(100% - 1100px);
+    height: 100%;
 }
 
 .wrap
@@ -63,12 +59,15 @@
     margin-top: 167px;
     margin-bottom: 100px;
 }
-
 /*
-.rightside_section
+.rightside_picture
 {
-    background-image: url('images/Head of the Fish.jpg');
-    background-repeat: repeat-y;
+    background-image: url('images/Head of the Fish.png');
+    background-attachment: fixed;
+    background-size: cover;
+    float: right;
+    width: 100%;
+    height: 100%;
 }
 
 .middle_wrap
